5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1596_2894.log
== TEST (2019-03-20 13:14:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (8*5)

# Impressao do valor total:
print(45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 13:15:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (8*5)

# Impressao do valor total:
print(45)
-- EXECUTION TIME:
0.195033
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
45
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
45
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 13:15:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (8*5)

# Impressao do valor total:
print(45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:04:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(ipunt("Quantidade de jogos"))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(ipunt("Quantidade de jogos"))
NameError: name 'ipunt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:05:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos"))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:05:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos"))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:05:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos"))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.228044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:23:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos"))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:23:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos"))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.114904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:25:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=8
frete=45.0

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:25:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=8
frete=45.0

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.140116
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
